--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@school) do |f| %>
+<%= form_for @school, :validate => true do |f| %>
   <% if @school.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@school.errors.count, "error") %> prohibited this school from being saved:</h2>
@@ -10,6 +10,12 @@
       </ul>
     </div>
   <% end %>
+
+  <%= f.text_field :Name %>
+  <%= f.text_field :code %>
+  <%= f.password_field :password %>
+  <%= f.password_field :password_confirmation %>
+  <%= f.text_area :address %>
 
   <%= f.actions do %>
     <%= f.submit %>
