--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -1,2 +1,2 @@
 <% @title = @school.name %>
-<% @page_action =  {:name => "Edit", :url => edit_school_path(@school)} %>
+<% @page_action =  {:name => "Add Student", :url => new_student_path()} %>
